--- a/Nostrabot/Nostrabot/config/supervisord.conf
+++ b/Nostrabot/Nostrabot/config/supervisord.conf
@@ -15,7 +15,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 user=alexa
-command=/bin/bash -c "python3.6 -u /opt/alexa/alexa.py"
+command=/bin/bash -c "python -u /opt/alexa/alexa.py"
 
 [program:ngrok_url]
 stdout_logfile=/dev/stdout
